hecho contacto.html y sus estilos

--- a/contacto.html
+++ b/contacto.html
@@ -44,6 +44,44 @@
                   </nav>
             </header>
         </div>
+        <div class="row">
+          <main class="col-12">
+            <h1 class="text-center">Contacta con nosotros</h1>
+            <hr class="my-4">
+            <div class="row">
+              <div class="col-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3078.400342936041!2d-6.371570624901361!3d39.505453210599605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd15e05971bed419%3A0x68d9c38a75d88c74!2sCatering%20C%C3%A1ceres%20Pajuelo!5e0!3m2!1ses!2ses!4v1713899067660!5m2!1ses!2ses"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+              <div class="col-6">
+                <div class="mb-3">
+                  <form class="form">
+                    <div class="mb-3 text-center">
+                      <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
+                      <input type="email" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="micorreo@gmail.com">
+                    </div>
+                    <div class="mb-3 text-center">
+                      <label for="exampleFormControlTextarea1" class="form-label">Escribe tu consulta</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <div class="text-center">
+                      <button type="submit" class="btn btn-success mb-3">Enviar</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </main>
+        </div>
+        
+        <div class="row mi_footer">
+          <footer class="col-12 ">
+              <p>Aviso Legal | Política de privacidad</p>
+              <hr>
+              <p>© 2024 Catering</p>
+              <img src="img/facebook.png" class="redes"> <img src="img/insta.png" class="redes">
+          </footer>
+      </div>
     </div>
+    <script src="bootstrap.min.js"></script>
 </body>
 </html>
