--- a/servicios.html
+++ b/servicios.html
@@ -44,6 +44,42 @@
                   </nav>
             </header>
         </div>
+        <div class="row">
+          <main class="col-12">
+            <div class="card" style="width: 18rem;">
+              <img src="img/bodas.jpg" class="card-img-top" alt="bodas">
+              <div class="card-body">
+                <h5 class="card-title">Bodas</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-secondary">Bodas</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="img/catering-para-comuniones.jpg" class="card-img-top" alt="comuniones">
+              <div class="card-body">
+                <h5 class="card-title">Comuniones</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-secondary">Comuniones</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="img/para llevar.jpg" class="card-img-top" alt="comida para llevar">
+              <div class="card-body">
+                <h5 class="card-title">Comida para llevar</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-secondary">Para llevar</a>
+              </div>
+            </div>
+          </main>
+        </div>
+        <div class="row mi_footer">
+          <footer class="col-12 ">
+              <p>Aviso Legal | Política de privacidad</p>
+              <hr>
+              <p>© 2024 Catering</p>
+              <img src="img/facebook.png" class="redes"> <img src="img/insta.png" class="redes">
+          </footer>
+        </div>
     </div>
 </body>
 </html>
