--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -44,6 +44,29 @@
                   </nav>
             </header>
         </div>
+        <div class="row">
+          <main class="col-12" >
+            <h1>Sobre Nosotros</h1>
+            <hr>
+            <div id="sobre_nosotros2">
+              <img src="img/sobrenosotros.jpeg" id="sobre_nosotros">
+              <p class="text-justify">El inicio de este sueño hoy hecho realidad comenzó en el año 2002, con gran vinculación al sector cinegético. En 2007 dimos el salto a la realización todo tipo de eventos y servicios y desde entonces nos avalan más de diez años de profesionalidad, innovación y mejora cada día en un servicio global y de excelencia.
+
+                Una empresa familiar que, desde el principio, apostó por dar vida a una potente organización de acreditada profesionalidad. El buen hacer de nuestros profesionales a lo largo de los años ha marcado la trayectoria ascendente de nuestro proyecto, convirtiéndonos en un referente en el servicio especializado de catering, fusionando vanguardia y tradición en cada una de las celebraciones.
+                
+                Estamos especializados en todo tipo de eventos, tanto para particulares: bodas, bautizos, comuniones, fiestas, aniversarios, graduaciones, monterías, etc, como para empresas: desayunos de trabajo, vinos de honor, coffee break, almuerzos de trabajo, comidas y cenas de empresa, congresos….</p>
+            </div>
+          </main>
+          
+        </div>
+        <div class="row mi_footer">
+          <footer class="col-12 ">
+              <p>Aviso Legal | Política de privacidad</p>
+              <hr>
+              <p>© 2024 Catering</p>
+              <img src="img/facebook.png" class="redes"> <img src="img/insta.png" class="redes">
+          </footer>
+        </div>
     </div>
 </body>
 </html>
