--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,7 @@
         <div class="row">
             <header class="col-12">
                 <h1>Cáceres Pajuelo</h1>
+                <!--MENU NAVEGACION-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
                       <a class="navbar-brand" href="#">
@@ -32,8 +33,13 @@
                           <li class="nav-item">
                             <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="servicios.html">Servicios</a>
+                          <li class="nav-item  dropdown">
+                            <a class="nav-link dropdown-toggle"id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"href="servicios.html">Servicios</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="bodas.html">Bodas</a></li>
+                              <li><a class="dropdown-item" href="comuniones.html">Comuniones</a></li>
+                              <li><a class="dropdown-item" href="llevar.html">Para llevar</a></li>
+                            </ul>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -54,6 +60,7 @@
               </div>
               <div class="col-6">
                 <div class="mb-3">
+                  <!--FORMULARIO-->
                   <form class="form">
                     <div class="mb-3 text-center">
                       <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
