listo solo ver acceso a servicios.html

--- a/llevar.html
+++ b/llevar.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <header class="col-12">
+            <header class="col-12 col-md-12 col-lg-12">
                 <h1>Cáceres Pajuelo</h1>
                 <!--MENU-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -52,7 +52,7 @@
         </div>
        
         <div class="row">
-            <main class="col-12">
+            <main class="col-12 col-md-12 col-lg-12">
                 <div class="card" style="width: 100">
                     <img src="img/tienda3.jpg" class="card-img-top w-75 mx-auto rounded" alt="comida para llevar">
                     <div class="card-body">
@@ -110,7 +110,7 @@
             </main>
         </div>
         <div class="row mi_footer">
-            <footer class="col-12 ">
+            <footer class="col-12 col-md-12 col-lg-12">
                 <p>Aviso Legal | Política de privacidad</p>
                 <hr>
                 <p>© 2024 Catering</p>
