--- a/servicios.html
+++ b/servicios.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
           <!--MENU NAVEGACION-->
-            <header class="col-12">
+            <header class="col-12 col-md-12 col-lg-12">
                 <h1>Cáceres Pajuelo</h1>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
@@ -51,7 +51,7 @@
             </header>
         </div>
       <div class="row">
-        <main class="col-12">
+        <main class="col-12 col-md-12 col-lg-12">
           <!--CARD CON SERVICIOS-->
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -84,21 +84,21 @@
                   </div>
                </div>
               </div>
-            </div>
+            
           </div>
         </main>
       </div>
         
         <!--footer-->
         <div class="row mi_footer">
-          <footer class="col-12">
+          <footer class="col-12 col-md-12 col-lg-12">
               <p>Aviso Legal | Política de privacidad</p>
               <hr>
               <p>© 2024 Catering</p>
               <img src="img/facebook.png" class="redes"> <img src="img/insta.png" class="redes">
           </footer>
         </div>
-    </div>
+  </div>
   <script src="bootstrap.min.js"></script>
 </body>
 </html>
