--- a/bodas.html
+++ b/bodas.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <header class="col-12">
+            <header class="col-12 col-md-12 col-lg-12">
                 <h1>Cáceres Pajuelo</h1>
                 <!--MENU NAVEGACION-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,7 +51,7 @@
             </header>
         </div>
         <div class="row">
-            <main class="col-12">
+            <main class="col-12 col-md-12 col-lg-12">
                 <h1>El día más feliz de vuestras vidas</h1>
                 <!--CARRUSEL-->
                 <div id="carouselExampleCaptions" class="carousel slide">
@@ -92,7 +92,7 @@
             </main>
         </div>
         <div class="row mi_footer">
-            <footer class="col-12 ">
+            <footer class="col-12 col-md-12 col-lg-12">
                 <p>Aviso Legal | Política de privacidad</p>
                 <hr>
                 <p>© 2024 Catering</p>
