--- a/comuniones.html
+++ b/comuniones.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <header class="col-12">
+            <header class="col-12 col-md-12 col-lg-12">
                 <h1>Cáceres Pajuelo</h1>
                 <!--MENU NAVEGACION-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,8 +49,9 @@
                     </div>
                   </nav>
             </header>
+          </div>
             <div class="row">
-                <main class="col-12">
+                <main class="col-12 col-md-12 col-lg-12">
                   <!--TABLA-->
                     <table class="table ">
                         <thead>
@@ -86,14 +87,14 @@
             </div>
             <!--footer-->
             <div class="row mi_footer">
-                <footer class="col-12 ">
+                <footer class="col-12 col-md-12 col-lg-12">
                     <p>Aviso Legal | Política de privacidad</p>
                     <hr>
                     <p>© 2024 Catering</p>
                     <img src="img/facebook.png" class="redes"> <img src="img/insta.png" class="redes">
                 </footer>
             </div>
-    </div>
+    
   <script src="bootstrap.min.js"></script>
 </body>
 </html>
