--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
           <!--MENU-->
-            <header class="col-12">
+            <header class="col-12 col-md-12 col-lg-12">
                 <h1>Cáceres Pajuelo</h1>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
@@ -51,7 +51,7 @@
             </header>
         </div>
         <div class="row">
-          <main class="col-12 ">
+          <main class="col-12 col-md-12 col-lg-12 ">
              <!--CARRUSEL-->
              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
@@ -116,7 +116,7 @@
        
       
         <div class="row mi_footer">
-            <footer class="col-12">
+            <footer class="col-12 col-md-12 col-lg-12">
                 <p>Aviso Legal | Política de privacidad</p>
                 <hr>
                 <p>© 2024 Catering</p>
