--- a/comuniones.html
+++ b/comuniones.html
@@ -34,12 +34,8 @@
                             <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
                           </li>
                           <li class="nav-item  dropdown">
-                            <a class="nav-link dropdown-toggle"id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"href="servicios.html">Servicios</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="bodas.html">Bodas</a></li>
-                              <li><a class="dropdown-item" href="comuniones.html">Comuniones</a></li>
-                              <li><a class="dropdown-item" href="llevar.html">Para llevar</a></li>
-                            </ul>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
+                            
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
