--- a/index.html
+++ b/index.html
@@ -33,14 +33,9 @@
                           <li class="nav-item">
                             <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
                           </li>
-                          <li class="nav-item  dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="servicios.html" role="button"  aria-expanded="false" >Servicios</a>
-                            <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="bodas.html">Bodas</a></li>
-                              <li><a class="dropdown-item" href="comuniones.html">Comuniones</a></li>
-                              <li><a class="dropdown-item" href="llevar.html">Para llevar</a></li>
-                            </ul>
-                          </li>
+                          <li class="nav-item ">
+                            <a class="nav-link" href="servicios.html">
+                              Servicios </a>
                           <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                           </li>
